# Alchemy-Dashboard

./: .gitignore  Meeting Notes 4-2-2026  README.md  alchemy_experiments.db  pyproject.toml
0-paper/: paper_draft.md
alchemy_dashboard/: ASTGen.py  __init__.py  alchemy_experiments.db  comparison_plots.py  config.py  db_utils.py  lineage_plots.py  main.py  models.py  plotting.py  simulation.py
alchemy_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alchemy_dashboard/static/: styles.css
alchemy_dashboard/templates/: base.html  database_view.html  home.html  index_with_bokeh.html  multi_compare.html  simulation.html
