[project]
name = "alchemy-dashboard"
version = "0.1.0"
description = "Web dashboard for exploring AlChemy experiment runs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "bokeh>=3.6,<3.7",
    "pandas>=2.1",
    "sqlalchemy>=2.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "maturin>=1.6",
]
