[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alchemy-dashboard"
version = "0.1.0"
description = "Web dashboard for exploring AlChemy experiment runs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "bokeh==3.6.3",
    "pandas>=2.1",
    "sqlalchemy>=2.0",
    "werkzeug>=3.0",
    "alchemy @ git+https://github.com/mathis-group/Modern-AlChemy.git@main"


]
[tool.uv]
package = true

[tool.uv.sources]
alchemy = { git = "https://github.com/mathis-group/Modern-AlChemy.git", branch = "main" }

[tool.setuptools.packages.find]
exclude = [
    "uploaded_configs",
    "experiments",
]